--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,13 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
-
-h1 {
-  font-family: Lato-Bold;
-  color: #433089;
-  margin-top: 50px;
-  font-size: 300%;
-  text-align: center; 
-}
-
 .card {
   box-sizing: border-box;
   border: 1px solid #D4D4D4;
@@ -41,7 +31,7 @@ h1 {
   text-align: center;
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  font-family: Lato-Regular;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -52,21 +42,21 @@ h1 {
   font-size: 14px;
 }
 .form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
+  font-family: Lato-Regular;
   outline: 0;
-  background: #422c89;
+  background: #F2A900;
   width: 100%;
   border: 0;
-  padding: 15px;
+  border-radius:5px;
+  padding: 10px;
   color: #FFFFFF;
-  font-size: 14px;
+  font-size: 16px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #422c89;
+  background: #F2A900;
 }
 .form .message {
   margin: 15px 0 0;
@@ -74,7 +64,7 @@ h1 {
   font-size: 12px;
 }
 .form .message a {
-  color: #422c89;
+  color: #0083C1;
   text-decoration: none;
 }
 .form .register-form {
@@ -119,7 +109,7 @@ body {
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
   background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
+  font-family: Lato-Regular;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -132,18 +122,45 @@ body {
 }
 
 .forum_container {
-  background-color: #FFFFFF;  
-  box-shadow: 0 12px 50px 0 rgba(0,0,0,0.2);
+  /*background-color: #FFFFFF;*/
   margin-top: 5px;
   margin-bottom: 10px;
   min-width: 500.837px;
 }
 
 .mylaurier {
-  font-family: "Roboto", sans-serif;
+  font-family: Lato-Regular;
   margin-top: 10px;
 }
 
 .email {
   width:50% !important;
+}
+
+.post-registration {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 30px 40px 60px 40px;
+  text-align: center;
+}
+
+.post-registration h1 {
+  font-family: Lato-Black;
+  font-size: 36px;
+  font-weight:900;
+  margin-bottom:10px;
+}
+
+.post-registration span {
+  font-family: Lato-Regular;
+  color:#83868A;
+  font-size: 16px;
+}
+img {
+  width:120px; 
+  height:auto; 
+  margin-bottom:10px;
 }
