--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav mr-4">
       <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">HOME</a>
+        <a class="nav-link" routerLink="/clubs/2" routerLinkActive="active">ABOUT US</a>
       </li>
 <!--       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link" routerLink="/compose" target="_blank" routerLinkActive="active">COMPOSE</a>
