Oh boy. Oh boy oh boy oh boy.

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -20,9 +20,9 @@
       		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="authService.userSignedIn$ && !didUserUpvote()">
 	      		<img src="assets/img/icons/Like.svg" class="heart">
 	      		<div class="d-flex flex-column">
-<!-- 	      			<span *ngIf="article.total_votes != 1">This article has {{article.total_votes}} likes</span>
+	      			<span *ngIf="article.total_votes != 1">This article has {{article.total_votes}} likes</span>
 	      			<span *ngIf="article.total_votes == 1">This article has 1 like</span>
-	      			<span>Like this article to give the author your support</span> -->
+	      			<span>Like this article to give the author your support</span>
 	      		</div>
       		</div>
       		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="didUserUpvote()">
@@ -32,14 +32,16 @@
       		<br>
 		      <div class="card mt-1" *ngIf="!isCommentActive && authService.userSignedIn$" (click)="toggleCommentActive()" style="cursor:pointer">
 		      	<div class="card-block d-flex flex-row">
-		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
+		      		<img [src]="authService.currentUser.image" *ngIf="authService.currentUser.image != null" class="avatar mr-3">
+		      		<img src="assets/img/Blank Avatar.jpg" *ngIf="authService.currentUser.image == null" class="avatar mr-3">
 		      		<span class="comment-placeholder mt-3">Join the discussion</span>
 		      	</div>
 		      </div>
 		      <div class="card mt-1 px-3" *ngIf="isCommentActive && authService.userSignedIn$">
 		      	<div class="d-flex flex-row mt-3">
-		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
-		      		<span class="comment-name-text mt-3">{{authService.currentUser().first_name}} {{authService.currentUser().last_name}}</span>
+		      		<img [src]="authService.currentUser.image" *ngIf="authService.currentUser.image != null" class="avatar mr-3">
+		      		<img src="assets/img/Blank Avatar.jpg" *ngIf="authService.currentUser.image == null" class="avatar mr-3">
+		      		<span class="comment-name-text mt-3">{{authService.currentUser.first_name}} {{authService.currentUser.last_name}}</span>
 		      	</div>
 		      	<textarea 
 		      		autofocus 
