--- a/src/app/job-detail-page/job-detail-page.component.css
+++ b/src/app/job-detail-page/job-detail-page.component.css
@@ -58,3 +58,12 @@
 select {
   border: 1px solid darkgrey;
 }
+
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
