--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -23,6 +23,7 @@
         <div class="dropdown-menu get-involved-dropdown" aria-labelledby="getInvolvedDropdown" >
           <a class="dropdown-item" routerLink="/clubs">Our Clubs</a>
           <a class="dropdown-item" routerLink="/hiring">Hiring</a>
+          <a class="dropdown-item" href="https://s3.us-east-2.amazonaws.com/lazsoc-images/Misc/New+Club+Proposal.docx" download><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Apply to start a club</a>
         </div>
       </li>
       <li class="nav-item mr-4">
