--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -89,10 +89,11 @@ textarea {
 }
 
 .heart {
-	width:80px;
+	width:60px;
 }
 
 .like-text {
 	font-family: Lato-Black;
-	font-size:40px;
+	font-size:35px;
+	margin-top:10px;
 }
