--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -5,7 +5,7 @@
         <div class="card-img-top">
           <img class="card-img-top club-banner" src="assets/img/{{club.app_banner}}">
         </div>
-        <img src="assets/img/thumbnails/{{club.app_logo}}" class="club-avatar">
+        <img src="assets/img/thumbnails/{{club.app_logo}}" style="background-color:white" class="club-avatar">
         <div class="card-block">
           <div class="row">
             <div class="col-sm-3 col-md-3 col-lg-3">
