--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-8 col-md-8 col-lg-8">
       <div class="card mt-4">
@@ -33,3 +33,4 @@
     </div>
   </div>
 </div>
+ -->
