--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -5,22 +5,22 @@
         <h3>Our Clubs</h3>
         <p class="under-header-text">The fun outside the classroom</p>
       </div>
-      <div *ngFor="let club of clubs | mapToIterable">
-        <div class="card pointer p-2" (click)="onSelect(club.val)" style="cursor:pointer">
+      <div *ngFor="let club of clubs">
+        <div class="card pointer p-2" (click)="onSelect(club)" style="cursor:pointer">
           <div class="row container-fluid py-0 pr-0">
             <div class="col-sm-3 col-md-3 col-lg-3 logo-div">
-              <img class="logo" src="assets/img/thumbnails/{{club.val.app_logo}}" style="margin-left:50px" alt="Club Logo">
+              <img class="logo" src="assets/img/thumbnails/{{club.app_logo}}" style="margin-left:50px" alt="Club Logo">
             </div>
             <div class="col-sm-8 col-md-8 col-lg-8">
               <div class="d-flex flex-column align-content-center">
                 <br/>
-                <span class="title">{{club.val.name}}</span>
+                <span class="title">{{club.name}}</span>
                 <div class="row container" id="bottom_margin_2">
-                  <span class="tags" *ngFor="let tag of club.val.club_tags; let i = index">
+                  <span class="tags" *ngFor="let tag of club.club_tags; let i = index">
                     <span *ngIf="i > 0">&nbsp; &bull; &nbsp;</span>
                     {{tag.tag}}
                   </span>
-                  <span class="club-description py-2">{{club.val.description}}</span>
+                  <span class="club-description py-2">{{club.description}}</span>
                 </div>
               </div>
               
