--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -4,12 +4,12 @@
     <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
       <div class="card mt-3" (click)="viewEvent(event)" style="cursor:pointer">
         <div class="card-img-top">
-          <img class="card-img-top" src="assets/img/{{clubs[event.club_id].app_banner}}" *ngIf="event.banner == ''">
+          <img class="card-img-top" src="assets/img/{{event.club.app_banner}}" *ngIf="event.banner == ''">
           <img class="card-img-top" [src]="event.banner" *ngIf="event.banner != ''">
         </div>
         <div class="card-block">
           <div class="d-flex flex-row mb-2">
-            <img src="assets/img/thumbnails/{{clubs[event.club_id].app_logo}}" class="club-avatar mr-3" alt="">
+            <img src="assets/img/thumbnails/{{event.club.app_logo}}" class="club-avatar mr-3" alt="">
             <div class="d-flex flex-column">
               <h4 class="club-title mb-1">{{event.title}}</h4>
               <h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
