--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -9,7 +9,7 @@
         <div class="card pointer p-2" (click)="onSelect(club)" style="cursor:pointer">
           <div class="row container-fluid py-0 pr-0">
             <div class="col-sm-3 col-md-3 col-lg-3 logo-div">
-              <img class="logo" src="assets/img/thumbnails/{{club.app_logo}}" style="margin-left:50px" alt="Club Logo">
+              <img class="logo" [src]="club.app_logo" style="margin-left:50px" alt="Club Logo">
             </div>
             <div class="col-sm-8 col-md-8 col-lg-8">
               <div class="d-flex flex-column align-content-center">
