--- a/src/app/hiring/hiring.component.html
+++ b/src/app/hiring/hiring.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="(clubID == 0 || clubID === posting.club_id)" class="card py-0" style="cursor:pointer" (click)="onSelect(posting)">
     <div class="card-block">
       <div class="d-flex mb-2">
-        <img src="assets/img/thumbnails/{{posting.club.app_logo}}" class="club-avatar mr-3" alt="">
+        <img [src]="posting.club.app_logo" class="club-avatar mr-3" alt="">
         <div class="d-flex flex-column">
           <h4 class="club-title mb-1">{{posting.title}}</h4>
           <h4 class="card-datetime">{{posting.club.name}}</h4>
