--- a/src/app/beans/beans.component.html
+++ b/src/app/beans/beans.component.html
@@ -7,7 +7,7 @@
       <div class="d-flex flex-wrap">
         <div class="card my-4 mx-1" *ngFor="let bean of beans" routerLink="/profile/{{bean.id}}">
           <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="avatar">
-          <div class="card-block">
+          <div class="card-body">
             <br><br>
             <span class="profile-name">{{bean.first_name}}&nbsp;{{bean.last_name}}</span><br>
             <span class="profile-subheading">Laurier BBA Student</span>
