--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -6,7 +6,7 @@
           <img class="card-img-top club-banner" src="assets/img/{{club.app_banner}}">
         </div>
         <img src="assets/img/thumbnails/{{club.app_logo}}" class="club-avatar">
-        <div class="card-block">
+        <div class="card-body">
           <div class="row">
             <div class="col-sm-3 col-md-3 col-lg-3">
             </div>
@@ -32,7 +32,7 @@
         <div class="col-sm-4 col-md-4 col-lg-4">
           <div class="card sticky">
             <h3 class="card-header card-header-text">View</h3>
-            <!-- <div class="card-block">
+            <!-- <div class="card-body">
 
             </div> -->
 						<ul class="list-group">
@@ -44,7 +44,7 @@
         <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
           <div class="card sticky" *ngIf="state === 'team'">
             <h3 class="card-header card-header-text">Team</h3>
-            <div class="card-block">
+            <div class="card-body">
             	<div class="d-flex justify-content-center">
             		<h6>Presidential & Internal</h6>
             	</div>
