--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div *ngIf="!anyEvents">
-        <div class="card-block">
+        <div class="card-body">
           <span class="none-found">There are no events this week</span>
         </div>
       </div>
