--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -2,10 +2,10 @@
   <div class="row justify-content-center">
     <div class="col-sm-9 col-md-9 col-lg-9">
       <div class="d-flex flex-row">
-        <h2 class="card card-title card-block mt-4 mb-0">Personal Information</h2>
+        <h2 class="card card-title card-body mt-4 mb-0">Personal Information</h2>
       </div>
       <div class="card mt-0">
-        <div class="card-block">
+        <div class="card-body">
           <div class="form-group">
             <div class="d-flex flex-row justify-content-center">
               <input type="file" name="file" id="file" class="inputfile" (change)="fileEvent($event)" />
