--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -1,25 +1,21 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
   <div class="row">
-    <div class="col-sm-11 col-md-11 col-lg-11 mt-4 left-content-pane">
+    <div class="col-11 mt-4 left-content-pane">
       <div class="card">
         <div class="card-img-top">
           <img class="card-img-top club-banner" [src]="club.app_banner">
         </div>
-        <img [src]="club.app_logo" style="background-color:white" class="club-avatar">
-        <div class="card-block">
-          <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-3">
-            </div>
-            <div class="col-sm-9 col-md-9 col-lg-9" style="padding-left:20px;">
-							<div class="d-flex flex-row mb-2 justify-content-start">
-								<span class="club-title">{{club.name}}</span>
-							</div>
+        <div class="card-body">
+          <div class="media">
+            <img [src]="club.app_logo" style="background-color:white" class="club-avatar ml-5">
+            <div class="media-body ml-4 mt-3">
+              <div class="club-title">{{club.name}}</div>
               <span class="club-tags" *ngFor="let tag of club.club_tags; let i = index">
-								<span *ngIf="i > 0">&bull;</span>
-								{{tag.tag}}
-							</span>
-              <br>
+                <span *ngIf="i > 0">&bull;</span>
+                {{tag.tag}}
+              </span>
             </div>
+            <br>
           </div>
         </div>
       </div>
@@ -39,7 +35,7 @@
         <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
           <div class="card sticky" *ngIf="state === 'about'">
             <h3 class="card-header card-header-text">About</h3>
-            <div class="card-block">
+            <div class="card-body">
 							<span class="club-detail-text">
 								{{club.description}}
 							</span>
@@ -50,7 +46,7 @@
 					</div>
           <div class="card sticky" *ngIf="state === 'team'">
             <h3 class="card-header card-header-text">Team</h3>
-            <div class="card-block">
+            <div class="card-body">
               <div id="accordion" role="tablist" aria-multiselectable="true">
                 
                 <div [attr.id]="'accordion_' + i" *ngFor="let portfolio of fullTeam.portfolios; let i = index;">
@@ -64,7 +60,7 @@
                   </div>
                   
                   <div [attr.id]="'collapseOne_' + i" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="card-block d-flex justify-content-around flex-wrap">
+                    <div class="card-body d-flex justify-content-around flex-wrap">
                       <div *ngFor="let person of portfolio.team" class="persons">
                         <div class="head-shot"><img src="{{person.image}}"></div>
                         <h6 class="mt-2">{{person.name}}</h6>
@@ -82,36 +78,39 @@
     <div class="col-sm-3 col-md-3 col-lg-3 mt-5" style="padding-top: 12px padding-left: 0px">
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
       <br>
-			<span class="card-header-text">Social Media</span>
-      <hr/>
-      <div class="d-flex flex-row mb-3" *ngIf="club.website != ''">
-        <img src="assets/img/website-icon.png" style="width:24px; height:24px">
-        <div class="d-flex flex-column ml-3">
-          <span class="social-link-title">Website</span>
-          <a href="{{club.website}}" class="social-link-link">{{club.website}}</a>
+      <div class="social-sticky">
+        <span class="card-header-text">Social Media</span>
+        <hr/>
+        <div class="d-flex flex-row mb-3" *ngIf="club.website != ''">
+          <img src="assets/img/website-icon.png" style="width:24px; height:24px">
+          <div class="d-flex flex-column ml-3">
+            <span class="social-link-title">Website</span>
+            <a href="{{club.website}}" class="social-link-link">{{club.website}}</a>
+          </div>
+        </div>
+        <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('facebook')">
+          <img src="assets/img/facebook_logo.png" style="width:24px; height:24px">
+          <div class="d-flex flex-column ml-3">
+            <span class="social-link-title">Facebook</span>
+            <a [href]="club.club_social_links['facebook']" class="social-link-link">{{club.club_social_links['facebook']}}</a>
+          </div>
+        </div>
+        <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('instagram')">
+          <img src="assets/img/instagram_logo.png" style="width:24px; height:24px">
+          <div class="d-flex flex-column ml-3">
+            <span class="social-link-title">Instagram</span>
+            <a [href]="club.club_social_links['instagram']" class="social-link-link">{{club.club_social_links['instagram']}}</a>
+          </div>
+        </div>
+        <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('twitter')">
+          <img src="assets/img/twitter_logo.png" style="width:24px; height:24px">
+          <div class="d-flex flex-column ml-3">
+            <span class="social-link-title">Twitter</span>
+            <a [href]="club.club_social_links['twitter']" class="social-link-link">{{club.club_social_links['twitter']}}</a>
+          </div>
         </div>
       </div>
-      <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('facebook')">
-        <img src="assets/img/facebook_logo.png" style="width:24px; height:24px">
-        <div class="d-flex flex-column ml-3">
-          <span class="social-link-title">Facebook</span>
-          <a [href]="club.club_social_links['facebook']" class="social-link-link">{{club.club_social_links['facebook']}}</a>
-        </div>
-      </div>
-      <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('instagram')">
-        <img src="assets/img/instagram_logo.png" style="width:24px; height:24px">
-        <div class="d-flex flex-column ml-3">
-          <span class="social-link-title">Instagram</span>
-          <a [href]="club.club_social_links['instagram']" class="social-link-link">{{club.club_social_links['instagram']}}</a>
-        </div>
-      </div>
-      <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('twitter')">
-        <img src="assets/img/twitter_logo.png" style="width:24px; height:24px">
-        <div class="d-flex flex-column ml-3">
-          <span class="social-link-title">Twitter</span>
-          <a [href]="club.club_social_links['twitter']" class="social-link-link">{{club.club_social_links['twitter']}}</a>
-        </div>
-      </div>
+
     </div>
   </div>
 </div>
