--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -2,7 +2,7 @@
 	<div class="row justify-content-center">
 		<div class="col-sm-3 col-md-3 col-lg-3 pl-0 pr-1">
 			<div class="card sticky">
-				<div class="card-block" style="text-align:center">
+				<div class="card-body" style="text-align:center">
 					<span class="big-gold-text">20+</span><br>
 					<span class="sub-font">Locations where the program is active</span>
 					<br><hr>
@@ -15,7 +15,7 @@
 		</div>
 		<div class="col-sm-9 col-md-9 col-lg-9 pr-0 pl-1">
 			<div class="card">
-			  <div class="card-block">
+			  <div class="card-body">
 			  	<img src="assets/img/discount-tag.png" class="discount-tag">
 			  	<span class="header-text">DESCRIPTION</span><br>
 			  	<span class="description-text">
