--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -17,7 +17,7 @@ h5 {
   /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
 
-.card-block {
+.card-body {
   font-size: 1em;
   position: relative;
   margin: 0;
