--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,7 +6,7 @@
           <img src="assets/img/cover-photo.jpeg" class="card-img-top banner-img">
         </div>
         <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-img">
-        <div class="card-block" style="text-align:center">
+        <div class="card-body" style="text-align:center">
 
           <br><br><br>
           <h2 class="name-font">{{currentUser.first_name}} {{currentUser.last_name}}</h2>
@@ -17,7 +17,7 @@
         <div class="col-sm-12 col-md-12 col-lg-12 pl-1">
           <div class="card">
             <h3 class="card-header card-header-text">About</h3>
-            <div class="card-block">
+            <div class="card-body">
               <span class="club-detail-text">
                 {{currentUser.summary}}
               </span>
