--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center mt-4">
     <div class="col-sm-11 col-md-11 col-lg-11">
       <div class="card">
-        <div class="card-block d-flex flex-row justify-content-center">
+        <div class="card-body d-flex flex-row justify-content-center">
           <div class="top-heading mx-3" (click)="resourceType = 'discountProgram'" [ngClass]="{topactive: resourceType == 'discountProgram'}">
             Discount Program
           </div>
