--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="card" *ngIf="!(authService.userSignedIn$)">
-  <div class="card-block" style="text-align:center">
+  <div class="card-body" style="text-align:center">
     <img src="assets/img/icons/Profile.svg" style="width:40%">
     <br>
     <span class="join-the-community">Join the Community</span><br>
