--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -24,7 +24,7 @@ h5 {
   border-radius: 0;
 }
 
-.card-block {
+.card-body {
   font-size: 1em;
   position: relative;
   margin: 0;
@@ -254,14 +254,6 @@ h5 {
 
 .open-positions-icon {
   width: 20%;
-}
-
-.card-header-text {
-  font-family: Lato-Black;
-  font-size: 16px;
-  color: #83868a;
-  letter-spacing: 0;
-  text-align: left;
 }
 
 .see-other-postings {
