--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
-  <div class="row">
-    <div class="col-11 mt-4 left-content-pane">
+  <div class="row justify-content-center">
+    <div class="mt-4 col-11">
       <div class="card">
         <div class="card-img-top">
           <img class="card-img-top club-banner" [src]="club.app_banner">
@@ -21,10 +21,10 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-8 col-md-8 col-lg-8 mt-4 left-content-pane">
-      <div class="row mt-2">
-        <div class="col-sm-4 col-md-4 col-lg-4">
+  <div class="row justify-content-center mt-4">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-4">
           <div class="card sticky">
             <h3 class="card-header card-header-text">View</h3>
 						<div class="side-heading py-2" (click)="state = 'about'" [ngClass]="{active: state == 'about'}">About</div>
@@ -32,7 +32,7 @@
             <div class="side-heading py-2" *ngIf="club.id == 2" (click)="state = 'team'" [ngClass]="{active: state == 'team'}">Team</div>
           </div>
         </div>
-        <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
+        <div class="col-8 pl-1">
           <div class="card sticky" *ngIf="state === 'about'">
             <h3 class="card-header card-header-text">About</h3>
             <div class="card-body">
@@ -75,7 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 col-md-3 col-lg-3 mt-5" style="padding-top: 12px padding-left: 0px">
+    <div class="col-sm-3 col-md-3 col-lg-3">
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
       <br>
       <div class="social-sticky">
