--- a/src/app/hiring/hiring.component.css
+++ b/src/app/hiring/hiring.component.css
@@ -1,30 +1,42 @@
-.club-title {
-    font-size:1.1em;
-    font-family:Lato-Bold;
-    line-height: 1.2857em;
-    font-weight:500;
+.position-title {
+    font-size:18px;
+    font-family:Lato-Black;
 }
-.card-datetime {
+.regular-text {
   font-family:Lato-Regular;
-  font-size:1em;
+  font-size:14px;
 }
 .club-avatar {
     display: block;
-    width: 50px;
-    height:50px;
-    /*border: 1px solid darkgrey;*/
+    width: 80px;
+    height:80px;
 }
-.card-text {
-    font-family:Lato-Regular;
-    clear: both;
-    margin-top: .5em;
-    /*margin-left: 65px;*/
-    font-size:0.9em;
-    color: rgba(0, 0, 0, .68);
+
+.banner-container {
+    position: relative;
+    text-align: center;
+    color: white;
 }
-.card {
-    border-radius: 0;
+
+.banner {
+    -webkit-filter: blur(2px);
 }
-.card:hover {
-  background-color: #FAFAFA;
+
+.text-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.open-positions {
+    font-family: Lato-Black;
+    color:white;
+    font-size:60px;
+}
+
+.banner-subtext {
+    font-family: Lato-Black;
+    color:white;
+    font-size:30px;
 }
