--- a/src/app/job-detail-page/job-detail-page.component.css
+++ b/src/app/job-detail-page/job-detail-page.component.css
@@ -8,12 +8,18 @@
 }
 
 .title-font {
-  font-family: Lato-Bold;
-  font-size: 30px;
+  font-family: Lato-Black;
+  font-size: 24px;
 }
 
 .club-name-font {
   font-family:Lato-Semibold;
+  font-size:18px;
+  color:#83868a;
+}
+
+.expiry-font {
+  font-family:Lato-Regular;
   font-size:18px;
   color:#83868a;
 }
@@ -28,8 +34,8 @@
 }
 
 .job-header-font {
-  font-family:Lato-Semibold;
-  font-size:12px;
+  font-family:Lato-Bold;
+  font-size:14px;
   color:#000000;
   text-transform:uppercase;
 }
@@ -41,8 +47,8 @@
 }
 
 .logo {
-  width:90px;
-  height:90px;
+  width:120px;
+  height:120px;
 }
 
 .form-group label {
